--- a/DbProject/Views/Person/_CreatePartial.cshtml
+++ b/DbProject/Views/Person/_CreatePartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model DbProject.Models.BusinessEntity
+﻿@model DbProject.Models.CustomPerson
 
 <div class="modal-header">
     <h5 class="modal-title" id="createModalLabel">Create New Person</h5>
@@ -11,21 +11,21 @@
         @Html.AntiForgeryToken()
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Person.Title)
-            @Html.EditorFor(model => model.Person.Title, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Person.Title, "", new { @class = "text-danger" })
+            @Html.LabelFor(model => model.Title)
+            @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Person.FirstName)
-            @Html.EditorFor(model => model.Person.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Person.FirstName, "", new { @class = "text-danger" })
+            @Html.LabelFor(model => model.FirstName)
+            @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Person.LastName)
-            @Html.EditorFor(model => model.Person.LastName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Person.LastName, "", new { @class = "text-danger" })
+            @Html.LabelFor(model => model.LastName)
+            @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
         </div>
 
         <div class="modal-footer">
