--- a/DbProject/Views/Person/_DetailsPartial.cshtml
+++ b/DbProject/Views/Person/_DetailsPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model DbProject.Models.BusinessEntity
+﻿@model DbProject.Models.CustomPerson
 
 <div class="modal-header">
     <h5 class="modal-title" id="detailsModalLabel">Person Details</h5>
@@ -10,17 +10,19 @@
     <form id="editForm" action="@Url.Action("Edit")" method="POST">
         @Html.AntiForgeryToken()
 
+        @Html.HiddenFor(model => model.CustomPersonID)
+
         <div class="form-group">
-            @Html.LabelFor(model => model.Person.Title)
-            @Html.EditorFor(model => model.Person.Title, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.LabelFor(model => model.Title)
+            @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Person.FirstName)
-            @Html.EditorFor(model => model.Person.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.LabelFor(model => model.FirstName)
+            @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Person.LastName)
-            @Html.EditorFor(model => model.Person.LastName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.LabelFor(model => model.LastName)
+            @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
         </div>
 
         <div class="modal-footer">
