--- a/DbProject/Views/Person/Index.cshtml
+++ b/DbProject/Views/Person/Index.cshtml
@@ -18,7 +18,7 @@
 <div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="createModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-
+            <!-- Content loaded here by AJAX -->
         </div>
     </div>
 </div>
@@ -64,7 +64,6 @@
                 });
             }
 
-            var currentSortOrder = $('#currentSortOrder').val();
 
             $(document).on('click', '.sort-link', function (e) {
                 e.preventDefault();
