--- a/DbProject/Views/Person/_DetailsPartial.cshtml
+++ b/DbProject/Views/Person/_DetailsPartial.cshtml
@@ -13,17 +13,26 @@
 
         @Html.HiddenFor(model => model.CustomPersonID)
 
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <div class="validation-summary">
+            @Html.ValidationSummary(true)
+        </div>
+
         <div class="form-group">
             @Html.LabelFor(model => model.Title)
             @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.FirstName)
             @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.LastName)
             @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
         </div>
 
         <div class="modal-footer">
