--- a/DbProject/Views/Person/_CreatePartial.cshtml
+++ b/DbProject/Views/Person/_CreatePartial.cshtml
@@ -33,6 +33,11 @@
             @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.PrimaryEmailAddress)
+            @Html.EditorFor(model => model.PrimaryEmailAddress, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.PrimaryEmailAddress, "", new { @class = "text-danger" })
+        </div>
 
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
