--- a/DbProject/Views/Person/_DetailsPartial.cshtml
+++ b/DbProject/Views/Person/_DetailsPartial.cshtml
@@ -34,6 +34,11 @@
             @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.PrimaryEmailAddress)
+            @Html.EditorFor(model => model.PrimaryEmailAddress, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.PrimaryEmailAddress, "", new { @class = "text-danger" })
+        </div>
 
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
